{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "cb97cbe3-638b-4536-ab4a-b97628bafcfa",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "92d5aa20-e9c9-4c61-8413-3b6fd069c2d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spells",
                    "type": "Button",
                    "id": "3c1486cb-8b9f-43e1-9861-e4a76a84209f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b65afcc0-1d51-42b8-94d0-ec1876005e2e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41fa778a-30ca-403c-a79d-a30fefad2b75",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84b7fe0a-0df3-4f13-829a-d46d206372ef",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74c31881-9570-43f3-9648-63b4681034ae",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f74ccf74-780b-40d5-9dab-0a29cf5df91f",
                    "path": "<Keyboard>/f4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd3e23f5-32e1-48e5-a7c2-e7fe141cb398",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7b65dbb-e518-4c7c-b188-e2e211b51234",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c7ba8b6-31a5-495a-8fe6-64b5675b716f",
                    "path": "<Keyboard>/f7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3996666-f969-48b4-9931-427fb5d9b477",
                    "path": "<Keyboard>/f8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82a4b358-5d23-41ab-8398-4d84c679a91e",
                    "path": "<Keyboard>/f9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b443cace-d08b-4071-8fb3-86ac997b5ec8",
                    "path": "<Keyboard>/f10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "203a43d3-33f3-4fdf-9d60-f6e227f0107d",
                    "path": "<Keyboard>/f11",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b636144-6fd7-4479-b87f-d3653239b18c",
                    "path": "<Keyboard>/f12",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spells",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}